# whisper-flow

./: .gitignore  README.md  hint.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  constants.ts  hint-main.tsx  hint.css  i18n.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/binaries/: whisper-cli-aarch64-apple-darwin
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: consts.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src-tauri/src/commands/: audio.rs  history.rs  mod.rs  model.rs  system.rs  window.rs
src/components/: ControlCard.tsx  DashboardHome.tsx  DragOverlay.tsx  Header.tsx  HistorySection.tsx  MainLayout.tsx  ModelDownloadScreen.tsx  PermissionScreen.tsx  RecordingHint.tsx  ResultSection.tsx  SettingsCard.tsx  ShortcutOverlay.tsx  Sidebar.tsx  Waveform.tsx
src/components/Onboarding/: HotkeyTestStep.tsx  MicTestStep.tsx  ModelDownloadStep.tsx  OnboardingHeader.tsx  OnboardingScreen.tsx  PermissionsStep.tsx  TryItIntroStep.tsx  TryItSamplesStep.tsx  WelcomeStep.tsx  types.ts
src/components/Onboarding/components/: HotkeySelectModal.tsx  Icons.tsx  KeyboardVisualizer.tsx  MicSelectModal.tsx  MicVisualizer.tsx  SplitLayout.tsx
src/hooks/: useAppLogic.ts  useHintWindowControl.ts
src/styles/: animations.css  components.css  global.css  layout.css  main.css  onboarding.css  variables.css
